--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,10 @@
     "@angular/platform-browser-dynamic": "~9.1.3",
     "@angular/router": "~9.1.3",
     "bootstrap": "4.1.1",
+    "chart.js": "^2.9.3",
+    "chartjs-plugin-datalabels": "^0.7.0",
+    "gulp": "^4.0.2",
+    "ng2-charts": "^2.3.0",
     "ngx-bootstrap": "^5.6.1",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
