--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "gulp": "^4.0.2",
     "ng2-charts": "^2.3.0",
     "ngx-bootstrap": "^5.6.1",
+    "password-hash": "^1.2.2",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
