--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~9.1.3",
+    "@angular/cdk": "^9.2.4",
     "@angular/common": "~9.1.3",
     "@angular/compiler": "~9.1.3",
     "@angular/core": "~9.1.3",
@@ -19,10 +20,15 @@
     "@angular/platform-browser": "~9.1.3",
     "@angular/platform-browser-dynamic": "~9.1.3",
     "@angular/router": "~9.1.3",
+    "@fortawesome/fontawesome-free": "^5.13.0",
+    "@types/chart.js": "^2.9.21",
+    "angular-bootstrap-md": "^9.3.0",
+    "animate.css": "^4.1.0",
     "bootstrap": "4.1.1",
-    "chart.js": "^2.9.3",
+    "chart.js": "^2.5.0",
     "chartjs-plugin-datalabels": "^0.7.0",
     "gulp": "^4.0.2",
+    "hammerjs": "^2.0.8",
     "ng2-charts": "^2.3.0",
     "ngx-bootstrap": "^5.6.1",
     "password-hash": "^1.2.2",
