--- a/backend/package.json
+++ b/backend/package.json
@@ -1,22 +1,18 @@
 {
   "name": "backend",
-  "version": "1.0.0",
-  "description": "",
+  "version": "0.0.1",
+  "description": "esto es backend en express",
   "main": "server.js",
   "scripts": {
-    "start": "nodemon server.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
-  "author": "",
+  "author": "gabriel schlam",
   "license": "ISC",
   "dependencies": {
-    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
-    "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.9.15"
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.4"
+    "mongoose": "^5.9.14",
+    "morgan": "^1.10.0"
   }
 }
