home funcionando con mongo

--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -14,6 +14,7 @@
       "sourceRoot": "src",
       "prefix": "app",
       "architect": {
+        
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
@@ -78,7 +79,8 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "vendeTuProducto:build"
+            "browserTarget": "vendeTuProducto:build",
+            "proxyConfig": "./proxy.conf.json"
           },
           "configurations": {
             "production": {
