--- a/backend/package.json
+++ b/backend/package.json
@@ -10,10 +10,13 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "connect-redis": "^4.0.4",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
     "mongoose": "^5.9.14",
     "morgan": "^1.10.0",
-    "password-hash": "^1.2.2"
+    "password-hash": "^1.2.2",
+    "redis": "^3.0.2"
   }
 }
