--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "connect-redis": "^4.0.4",
+    "cookie-parser": "^1.4.5",
+    "cookies": "^0.8.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
