--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "@fortawesome/fontawesome-free": "^5.13.0",
     "@types/chart.js": "^2.9.21",
     "angular-bootstrap-md": "^9.3.0",
+    "angular-cookies": "^1.7.9",
     "animate.css": "^4.1.0",
     "bootstrap": "4.1.1",
     "chart.js": "^2.5.0",
